# AI-Chatbot-with-Data-Explore-Feature

./: .env  AI_Assis.py  AI_assistant.py  README.md  agents.py  app.py  home_page.py  requirements.txt
chatbot_api/: pyproject.toml
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: agents.py  initial_agents.py
chatbot_api/src/models/: models.py
chatbot_api/src/utils/: csv_agents.py  pdf_processing.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: AI_Assis.py  entrypoint.sh  response_process.py
utils/: pdf_processing.py
