[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "langchain==0.0.348",
    "fastapi==0.109.0",
    "langchain-experimental==0.0.45",
    "langchainhub==0.1.14",
    "numpy==1.26.2",
    "pydantic==1.10.13",
    "uvicorn==0.25.0",
    "python-dotenv==1.0.0",
    "SpeechRecognition==3.10.0",
    "pyttsx3==2.90",
    "PyPDF2==3.0.1",
    "datetime==5.1",
    "pdfplumber~=0.11.3",
    "dotenv~=0.0.5",
    "pandas~=2.2.2",
    "matplotlib~=3.9.2",
]

[project.optional-dependencies]
dev = ["black", "flake8"]